add 0.0.6 version
