# app/main/docs/swagger.yaml
@@ -1,5 +1,16 @@
 basePath: /
 definitions:
+  main.Post:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      text:
+        type: string
+      username:
+        type: string
+    type: object
   main.User:
     properties:
       biography:
@@ -49,6 +60,38 @@ paths:
       summary: Hello endpoint
       tags:
       - system
+  /friend/delete:
+    delete:
+      parameters:
+      - description: Friend user ID
+        in: query
+        name: user_id
+        required: true
+        type: string
+      responses:
+        "204":
+          description: No Content
+      security:
+      - BearerAuth: []
+      summary: Delete friend
+      tags:
+      - friend
+  /friend/set:
+    post:
+      parameters:
+      - description: Friend user ID
+        in: query
+        name: user_id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+      security:
+      - BearerAuth: []
+      summary: Add friend
+      tags:
+      - friend
   /health:
     get:
       responses:
@@ -75,6 +118,114 @@ paths:
       summary: Login user
       tags:
       - auth
+  /post/create:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Post
+        in: body
+        name: post
+        required: true
+        schema:
+          $ref: '#/definitions/main.Post'
+      responses:
+        "201":
+          description: Created
+      security:
+      - BearerAuth: []
+      summary: Create post
+      tags:
+      - post
+  /post/delete:
+    delete:
+      parameters:
+      - description: Post ID
+        in: query
+        name: id
+        required: true
+        type: integer
+      responses:
+        "204":
+          description: No Content
+      security:
+      - BearerAuth: []
+      summary: Delete post
+      tags:
+      - post
+  /post/feed:
+    get:
+      description: Returns paginated feed of posts from friends
+      parameters:
+      - description: Offset
+        example: 0
+        in: query
+        name: offset
+        type: integer
+      - description: Limit
+        example: 10
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/main.Post'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Get user feed
+      tags:
+      - post
+  /post/get:
+    get:
+      parameters:
+      - description: Post ID
+        in: query
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.Post'
+      security:
+      - BearerAuth: []
+      summary: Get post
+      tags:
+      - post
+  /post/update:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: Post
+        in: body
+        name: post
+        required: true
+        schema:
+          $ref: '#/definitions/main.Post'
+      responses:
+        "200":
+          description: OK
+      security:
+      - BearerAuth: []
+      summary: Update post
+      tags:
+      - post
   /user/delete/{username}:
     delete:
       parameters:
